--- a/tests/test-stories/output/index.html
+++ b/tests/test-stories/output/index.html
@@ -16,101 +16,10 @@
 		<div id="tw-story">
 			<div id="tw-passage"></div>
 		</div>
-	</body>
-	<script type="text/javascript">
-		// Part 1, parse <tw-storydata> node
-// Part 2, use that data to display stuff in the #passage node
-// Part 3, other fun stuff!
-const $882b6d93070905b3$var$buildStoryData = ()=>{
-    // Get Story data from root node
-    const rootStoryDataNode = document.querySelector("tw-storydata");
-    if (!rootStoryDataNode) throw new Error("Story Data is missing! Oops!");
-    const name = rootStoryDataNode.getAttribute("name");
-    const ifid = rootStoryDataNode.getAttribute("ifid");
-    const startnode = rootStoryDataNode.getAttribute("startnode");
-    if (!name) throw new Error("Story is missing a name!");
-    if (!ifid) throw new Error(`Story is missing an ifid!`);
-    if (!startnode) throw new Error(`No startnode specified!`);
-    const format = rootStoryDataNode.getAttribute("format");
-    const formatVersion = rootStoryDataNode.getAttribute("format-version");
-    const zoom = rootStoryDataNode.getAttribute("zoom");
-    const creator = rootStoryDataNode.getAttribute("creator");
-    const creatorVersion = rootStoryDataNode.getAttribute("creator-version");
-    // Get Passages Data
-    const passages = [];
-    const passageNodes = document.querySelectorAll("tw-passagedata");
-    Array.from(passageNodes).forEach((node)=>{
-        const pid = node.getAttribute("pid");
-        const name = node.getAttribute("name");
-        if (!pid) throw new Error(`A passage (name: ${name}) is missing a pid!`);
-        if (!name) throw new Error(`A passage with pid ${pid} is missing a name!`);
-        const tagsRaw = node.getAttribute("name");
-        const positionRaw = node.getAttribute("name");
-        const sizeRaw = node.getAttribute("name");
-        const content = node.innerHTML;
-        const tags = tagsRaw?.split(" ");
-        const position = {
-            x: 0,
-            y: 0
-        };
-        if (positionRaw) {
-            const positionCoords = positionRaw.split(",").map((n)=>parseFloat(n));
-            position.x = positionCoords[0];
-            position.y = positionCoords[1];
-        }
-        const size = {
-            width: 100,
-            height: 100
-        };
-        if (sizeRaw) {
-            const dims = sizeRaw.split(",").map((n)=>parseFloat(n));
-            size.width = dims[0];
-            size.height = dims[1];
-        }
-        passages.push({
-            pid: pid,
-            name: name,
-            tags: tags,
-            position: position,
-            size: size,
-            content: content
-        });
-    });
-    return {
-        name: name,
-        ifid: ifid,
-        format: format,
-        formatVersion: formatVersion,
-        startnode: startnode,
-        zoom: zoom,
-        creator: creator,
-        creatorVersion: creatorVersion,
-        passages: passages,
-        currentPassagePid: startnode
-    };
-};
-const $882b6d93070905b3$var$getPassageByPid = (pid, passages)=>{
-    return passages.find((passage)=>{
-        return passage.pid === pid;
-    });
-};
-const $882b6d93070905b3$var$displayPassage = (pid, passages, node)=>{
-    if (!pid) throw new Error(`Tried to display a passage without supplying a pid!`);
-    const passage = $882b6d93070905b3$var$getPassageByPid(pid, passages);
-    if (!passage) throw new Error(`Tried to display passage with pid: ${pid}, but it doesn't exist!`);
-    node.innerHTML = passage.content;
-};
-(()=>{
-    const storyData = $882b6d93070905b3$var$buildStoryData();
-    const storyContainer = document.querySelector("#tw-story");
-    if (!storyContainer) throw new Error(`Missing story container #tw-story!`);
-    const passageContainer = storyContainer.querySelector("#tw-story #tw-passage");
-    if (!passageContainer) throw new Error(`Missing passage container #tw-passage`);
-    $882b6d93070905b3$var$displayPassage(storyData.currentPassagePid, storyData.passages, passageContainer);
-})();
-
-
+		<script type="text/javascript">
+			(()=>{const t=(()=>{const t=document.querySelector("tw-storydata");if(!t)throw new Error("Story Data is missing! Oops!");const r=t.getAttribute("name"),e=t.getAttribute("ifid"),i=t.getAttribute("startnode");if(!r)throw new Error("Story is missing a name!");if(!e)throw new Error("Story is missing an ifid!");if(!i)throw new Error("No startnode specified!");const s=t.getAttribute("format"),o=t.getAttribute("format-version"),a=t.getAttribute("zoom"),n=t.getAttribute("creator"),g=t.getAttribute("creator-version"),p=[],w=document.querySelectorAll("tw-passagedata");return Array.from(w).forEach((t=>{const r=t.getAttribute("pid"),e=t.getAttribute("name");if(!r)throw new Error(`A passage (name: ${e}) is missing a pid!`);if(!e)throw new Error(`A passage with pid ${r} is missing a name!`);const i=t.getAttribute("name"),s=t.getAttribute("name"),o=t.getAttribute("name"),a=t.innerHTML,n=i?.split(" "),g={x:0,y:0};if(s){const t=s.split(",").map((t=>parseFloat(t)));g.x=t[0],g.y=t[1]}const w={width:100,height:100};if(o){const t=o.split(",").map((t=>parseFloat(t)));w.width=t[0],w.height=t[1]}p.push({pid:r,name:e,tags:n,position:g,size:w,content:a})})),{name:r,ifid:e,format:s,formatVersion:o,startnode:i,zoom:a,creator:n,creatorVersion:g,passages:p,currentPassagePid:i}})(),r=document.querySelector("#tw-story");if(!r)throw new Error("Missing story container #tw-story!");const e=r.querySelector("#tw-story #tw-passage");if(!e)throw new Error("Missing passage container #tw-passage");((t,r,e)=>{if(!t)throw new Error("Tried to display a passage without supplying a pid!");const i=((t,r)=>r.find((r=>r.pid===t)))(t,r);if(!i)throw new Error(`Tried to display passage with pid: ${t}, but it doesn't exist!`);e.innerHTML=i.content})(t.currentPassagePid,t.passages,e)})();
 //# sourceMappingURL=index.js.map
 
-	</script>
+		</script>
+	</body>
 </html>
